--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,41 +8,53 @@
     <title>cash register manager</title>
     <link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
     <div class="container">
         <h1 class="heading">CASH REGISTER MANAGER</h1>
-        <P class="description">   Enter the bill amount and cash given by the customer and know
+        <P class="description"> Enter the bill amount and cash given by the customer and know the 
             minimum number of notes to return.
         </P>
-            <label for="bill-amount">Bill Amount:</label>
-            <input id="bill-amount" type="text">
+        <label for="bill-amount">Bill Amount:</label>
+        <input id="bill-amount" type="number" />
+        <button id="next-button">NEXT</button>
+        <div  class="cash-input  container "> 
             <label for="cash-given">CashGiven:</label>
-            <input id="cash-given" type="text">
-            <button id="check-button">CHECK</button>
-            <table class="change-table">
-                <caption>Return Change</caption>
-                <tr>
-                    <th>No. of Notes</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th>Note</th>
-                    <td>2000</td>
-                    <td>500</td>
-                    <td>100</td>
-                    <td>20</td>
-                    <td>10</td>
-                    <td>5</td>
-                    <td>1</td>
-                </tr>
-               
-            
-            </table>
+            <input id="cash-given" type="number" />
+            <button id="check-button">CHECK</button></div>
+        <p id="error-message"></p>
+        <table class="change-table">
+            <caption>Return Change</caption>
+            <tr>
+                <th>No. of Notes</th>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+            </tr>
+            <tr>
+                <th>Note</th>
+                <td>2000</td>
+                <td>500</td>
+                <td>100</td>
+                <td>20</td>
+                <td>10</td>
+                <td>5</td>
+                <td>1</td>
+            </tr>
+
+
+        </table>
     </div>
     <footer>
+
         <div class="footer">© | 2023| JebazAugastinNadar</div>
 
     </footer>
 </body>
 <script src="./index.js"></script>
+
 </html>
