--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <label for="bill-amount">Bill Amount:</label>
         <input id="bill-amount" type="number" />
         <!-- <button id="next-button">NEXT</button> -->
-        <div  class="cash-input  container "> 
+        <div  class="cash-input "> 
             <label for="cash-given">CashGiven:</label>
             <input id="cash-given" type="number" />
             <button id="check-button">CHECK</button></div>
         <p class="error" id="error-message"></p>            
         <table id="output">
-            <caption>Return Change</caption>
+            <caption>Return Change:</caption>
             <tr>
                 <th>No. of Notes</th>
                 <td class="no-of-notes"></td>
